condaenvsdir = $(datadir)/$(PACKAGE)/conda_envs
condaenvs_DATA= allelecount.yml ascat.yml bcftools.yml bedtools.yml	\
bwa.yml cnvkit.yml delly.yml facets.yml gatk4.yml gdc-client.yml	\
gridss.yml lofreq.yml lumpy.yml manta.yml msisensor.yml platypus.yml	\
pyega3.yml samtools.yml sequenza.yml smoove.yml snp-pileup.yml		\
strelka.yml svtyper.yml tabix.yml java-jre.yml

EXTRA_DIST= $(condaenvs_DATA)
