condaenvsdir = $(datadir)/$(PACKAGE)/conda_envs
condaenvs_DATA= allelecount.yml ascat.yml bcftools.yml bedtools.yml	\
bwa.yml cnvkit.yml delly.yml facets.yml gatk4.yml gdc-client.yml	\
lofreq.yml lumpy.yml manta.yml msisensor-pro.yml platypus.yml		\
pyega3.yml samtools.yml sequenza.yml smoove.yml snp-pileup.yml		\
strelka.yml svtyper.yml tabix.yml snpeff.yml

EXTRA_DIST= $(condaenvs_DATA)
