pplfilesdir = $(datadir)/$(PACKAGE)/debasher_programs
pplfiles_DATA= genodb_nodownload_basic.sh genodb_nodownload_extended.sh	\
genodb_nodownload_xgs.sh genodb_ega_basic.sh genodb_ega_asp_basic.sh	\
genodb_aws_basic.sh genodb_collab_basic.sh genodb_ega_asp_extended.sh	\
genodb_ega_decsingle_extended.sh genodb_copy_extended.sh		\
genodb_copy_harmoniz.sh genodb_copy_debug.sh genodb_gdc_extended.sh	\
genodb_tcga_xgs.sh

EXTRA_DIST= $(pplfiles_DATA)
