pplfilesdir = $(datadir)/$(PACKAGE)/pipelines
pplfiles_DATA= nodownload_basic.sh nodownload_extended.sh	\
nodownload_xgs.sh ega_basic.sh ega_asp_basic.sh aws_basic.sh	\
collab_basic.sh ega_asp_extended.sh ega_decsingle_extended.sh	\
copy_extended.sh copy_harmoniz.sh copy_debug.sh gdc_extended.sh	\
tcga_xgs.sh gen_wisecondorx_ref_req.csv

EXTRA_DIST= $(pplfiles_DATA)
