pplfilesdir = $(datadir)/$(PACKAGE)/pipelines
pplfiles_DATA= genop_nodownload_basic.sh genop_nodownload_extended.sh	\
genop_nodownload_xgs.sh genop_ega_basic.sh genop_ega_asp_basic.sh	\
genop_aws_basic.sh genop_collab_basic.sh genop_ega_asp_extended.sh	\
genop_ega_decsingle_extended.sh genop_copy_extended.sh			\
genop_copy_harmoniz.sh genop_copy_debug.sh genop_gdc_extended.sh	\
genop_tcga_xgs.sh

EXTRA_DIST= $(pplfiles_DATA)
