pplfilesdir = $(datadir)/$(PACKAGE)/ppl_files
pplfiles_DATA= enrich_gen_ref.ppl basic_test.ppl ega_asp_test.ppl	\
aws_test.ppl collab_test.ppl basic.ppl extended.ppl ega_dataset.ppl	\
ega_dataset_rfilt.ppl ega_asp_dataset.ppl ega_asp_dataset_rfilt.ppl	\
ega_asp_dataset_rfilt_alt.ppl gen_wisecondorx_ref_req.csv

EXTRA_DIST= $(pplfiles_DATA)
