pplfilesdir = $(datadir)/$(PACKAGE)/ppl_files
pplfiles_DATA= nodownload_basic.ppl nodownload_extended.ppl		\
nodownload_xgs.ppl ega_basic.ppl ega_asp_basic.ppl aws_basic.ppl	\
collab_basic.ppl ega_asp_extended.ppl copy_extended.ppl tcga_xgs.ppl	\
gen_wisecondorx_ref_req.csv

EXTRA_DIST= $(pplfiles_DATA)
